PCAI-122 Internal Tools API в Java для Python через gRPC (Steam + Similar + опц. Search) + Перенес на реактивный сервер